--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <title>LTCW1</title>
 <link href="CSS/style.css" rel="stylesheet" type="text/css">
-<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Lobster|Shadows+Into+Light|BenchNine' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="wrap">
 	<div class="section sTop">
 		<div class="inner">
-			<h1 class="title">My amazing one page website</h1>
-			<h2 class="subtitle">And it's all about mopeds!</h2>
+			<h1 class="title">Tech Companies In Seattle</h1>
+			<h2 class="subtitle">The war between Microsoft and Amazon</h2>
 		</div>
 	</div>
 
